examples/mood/tests/evaluate/enum_construction_three_values.mood
enum Maybe {
  Some(i32),
  None
}

pub fn test(): i32 {
  let x: Maybe = Maybe::Some(10_i32, 20_i32, 30_i32);
  10_i32
}